--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Sklepik z marzeniami. Zapraszam!</h1>
+<h3>Sklepik z marzeniami</h3>
 
-<h2>Kategorie</h2>
+Kategorie:
 <table>
 	<% @categories.each do |category| %>
 		<tr>
@@ -8,12 +8,12 @@
 		</tr>
 	<% end %>
 </table>
-
-<h2>Produkty</h2>
+</p>
+Produkty:
 <table>
-<% @products.each do |product| %>
-	<tr>
-		<td><%= link_to "#{product.name}", product %></td>
-	</tr>
-<% end %>
+	<% @products.each do |product| %>
+		<tr>
+			<td><%= link_to "#{product.name}", product %></td>
+		</tr>
+	<% end %>
 </table>
