--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,5 +24,18 @@
   <% end %>
 <%= yield %>
 
+<div class="span9">
+    <% if notice %>
+      <div class='alert alert-success'>
+        <%= notice %>
+      </div>
+    <% end %>
+	<% if alert %>
+      <div class='alert alert-warning'>
+        <%= alert %>
+      </div>
+    <% end %>
+    <%= yield %>
+  </div>
 </body>
 </html>
