cosmetic(?) fix in search homework 4

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= f.label( :description_cont, "opis") %>
     <%= f.text_field :description_cont %>
     <br>
-    <%= f.label( :price_gteq, "cena od") %>
+    <%= f.label( :price_gteq, "cena w groszach(?) od") %>
     <%= f.text_field :price_gteq , :style => 'width:70px;' %>
     <%= f.label( :price_lteq, "do") %>
     <%= f.text_field :price_lteq, :style => 'width:70px;' %>
