--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -5,7 +5,7 @@
 		<td><%= category.id %></td>
 		<td><%= category.name %></td>
 		<td><%= link_to 'edytuj', edit_admin_category_path(category) %></td>
-		<td><%= link_to 'usun', admin_category_path(category), method: :delete %></td>
+		<td><%= button_to 'usun', admin_category_path(category), method: :delete %></td>
 	</tr>
 <% end %>
 
