--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -15,7 +15,7 @@
 		<td><%= product.price %></td>
 		<td><%= product.category_id %></td>
 		<td><%= link_to 'edytuj', edit_admin_product_path(product) %></td>
-		<td><%= link_to 'usun', admin_product_path(product), confirm: 'Jestes pewien?', method: :delete %></td>
+		<td><%= button_to 'usun', admin_product_path(product), method: :delete %></td>
 		</tr>
 	<% end %>
 </table>
